Changes for 3.3.0

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.2.1rc1

New features:
..F....... [ZBX-11136] increased width of input fields (Sasha)

Bug fixes:
..F....... [ZBX-11202] fixed timeline in Problem view which shows "Yesterday" instead of "Today" (Sasha)
..F....... [ZBX-11120] fixed checkbox functionality and display of undefined indexes in trigger expression and recovery expression constructor (Ivo)
A......... [ZBX-10758] added converting of SNMP lld rules in XML import (Sasha)
..F....... [ZBX-11131] removed mistaken support of {ITEM.VALUE} and {ITEM.LASTVALUE} macros in trigger URLs (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.0

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), Hebrew, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.0rc2

Bug fixes:
........S. [ZBX-11182] fixed creating of recovery expressions for triggers created from trigger prototypes (Sasha)
..F....... [ZBX-11182] added possibility to open lld-created trigger from list of items (Sasha)
........S. [ZBX-11189] fixed resolving of problems by event correlation on trigger level (Sasha)
........S. [ZBX-11187] improved performance of event tag processing by caching eventtagid and problemtagid (Sasha)
........S. [ZBX-11177] fixed sql errors while processing event correlation on trigger level (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.0rc1

New features:
...G...... [ZBXNEXT-3206] added support of flexible item key parameters for aliases (Sasha)
..F....... [ZBXNEXT-3405] implemented timeline in Monitoring->Problems view (Pavel, Sasha)