@@ -11,6 +11,7 @@ New features:
 ..F....... [ZBX-11136] increased width of input fields (Sasha)
 
 Bug fixes:
+A......... [ZBX-11196] implemented dynamic default sortorder for icon map mappings, now default sortorder increases by one with each entry of mapping (Cemeris)
 ..F....... [ZBX-11202] fixed timeline in Problem view which shows "Yesterday" instead of "Today" (Sasha)
 ..F....... [ZBX-11120] fixed checkbox functionality and display of undefined indexes in trigger expression and recovery expression constructor (Ivo)
 A......... [ZBX-10758] added converting of SNMP lld rules in XML import (Sasha)
